# src/swagger-controllers/transactions.ts
@@ -1,0 +1,5 @@
+import { TYPES } from '../di/types';
+import { container } from '../di/container';
+import { TransactionsController } from '../rest-controllers/transactions.controller';
+
+export = container.get<TransactionsController>(TYPES.TransactionController);
