# swagger/paths/transactions.yaml
@@ -1,119 +1,14 @@
-x-swagger-router-controller: drone-prices
+x-swagger-router-controller: transactions
 
 get:
   tags:
-  - drone-prices
-  - no-auth
-  summary: List drone prices
-  operationId: getPrices
-  parameters:
-  - in: query
-    name: select
-    required: false
-    type: array
-    collectionFormat: csv
-    uniqueItems: true
-    items:
-      type: string
-      enum:
-      - priceId
-      - droneId
-      - createdAt
-      - actionType
-      - price
-  - in: query
-    name: price-ids
-    required: false
-    type: array
-    collectionFormat: csv
-    uniqueItems: true
-    minItems: 1
-    items:
-      # NOTE: it is BigInt type, but I am not able to reference it
-      type: string
-      pattern: ^\d{1,19}$
-  - in: query
-    name: drone-ids
-    required: false
-    type: array
-    collectionFormat: csv
-    uniqueItems: true
-    minItems: 1
-    items:
-      # NOTE: it is BigInt type, but I am not able to reference it
-      type: string
-      pattern: ^\d{1,19}$price
-  - in: query
-    name: created-at-limits
-    type: array
-    minItems: 2
-    maxItems: 2
-    collectionFormat: csv
-    uniqueItems: true
-    items:
-      # NOTE: it is Date type, but I am not able to reference it
-      type: string
-      pattern: ^([\+-]?\d{4}(?!\d{2}\b))((-?)((0[1-9]|1[0-2])(\3([12]\d|0[1-9]|3[01]))?|W([0-4]\d|5[0-2])(-?[1-7])?|(00[1-9]|0[1-9]\d|[12]\d{2}|3([0-5]\d|6[1-6])))([T\s]((([01]\d|2[0-3])((:?)[0-5]\d)?|24\:?00)([\.,]\d+(?!:))?)?(\17[0-5]\d([\.,]\d+)?)?([zZ]|([\+-])([01]\d|2[0-3]):?([0-5]\d)?)?)?)?$
-  - in: query
-    name: action-types
-    type: array
-    maxItems: 2
-    collectionFormat: csv
-    uniqueItems: true
-    items:
-      type: integer
-      minimum: 1
-      maximum: 2
-  - in: query
-    name: price-limits
-    type: array
-    minItems: 2
-    maxItems: 2
-    collectionFormat: csv
-    uniqueItems: true
-    items:
-      # NOTE: it is Decimal type, but I am not able to reference it
-      type: string
-      pattern: ^\d{1,7}(\.\d{0,2})?$
-  - in: query
-    name: sort
-    type: array
-    required: false
-    minItems: 1
-    maxItems: 5
-    collectionFormat: csv
-    uniqueItems: true
-    items:
-      type: string
-      enum:
-      - +priceId
-      - +droneId
-      - +createdAt
-      - +actionType
-      - +price
-      - -priceId
-      - -droneId
-      - -createdAt
-      - -actionType
-      - -price
-  responses:
-    200:
-      description: OK
-      schema:
-        type: array
-        items:
-          $ref: '#/definitions/DronePrice'
-    400:
-      $ref: '#/responses/ClientError'
-
-post:
-  tags:
-  - drone-prices
-  summary: Create IDronePrice
-  operationId: createDronePrice
+  - transactions
+  summary: List transactions
+  operationId: getTransactions
   security:
   - Bearer: []
   x-security-scopes:
+  - customer
   - owner
   - landlord
   parameters:
@@ -126,21 +21,145 @@ post:
     items:
       type: string
       enum:
-      - priceId
-      - droneId
+      - transactionId
       - createdAt
-      - actionType
-      - price
-  - in: body
-    name: dronePrice
-    required: true
-    schema:
-      $ref: '#/definitions/DronePriceCreate'
+      - priceId
+      - userId
+      - period
+      - status
+  - in: query
+    name: price-ids
+    required: false
+    type: array
+    collectionFormat: csv
+    uniqueItems: true
+    minItems: 1
+    items:
+      # NOTE: it is BigInt type, but I am not able to reference it
+      type: string
+      pattern: ^\d{1,19}$
+  - in: query
+    name: transaction-ids
+    required: false
+    type: array
+    collectionFormat: csv
+    uniqueItems: true
+    minItems: 1
+    items:
+      # NOTE: it is BigInt type, but I am not able to reference it
+      type: string
+      pattern: ^\d{1,19}$
+  - in: query
+    name: user-ids
+    required: false
+    type: array
+    collectionFormat: csv
+    uniqueItems: true
+    minItems: 1
+    items:
+      # NOTE: it is BigInt type, but I am not able to reference it
+      type: string
+      pattern: ^\d{1,19}$
+  - in: query
+    name: created-at-limits
+    type: array
+    minItems: 2
+    maxItems: 2
+    collectionFormat: csv
+    uniqueItems: true
+    items:
+      # NOTE: it is Date type, but I am not able to reference it
+      type: string
+      pattern: ^([\+-]?\d{4}(?!\d{2}\b))((-?)((0[1-9]|1[0-2])(\3([12]\d|0[1-9]|3[01]))?|W([0-4]\d|5[0-2])(-?[1-7])?|(00[1-9]|0[1-9]\d|[12]\d{2}|3([0-5]\d|6[1-6])))([T\s]((([01]\d|2[0-3])((:?)[0-5]\d)?|24\:?00)([\.,]\d+(?!:))?)?(\17[0-5]\d([\.,]\d+)?)?([zZ]|([\+-])([01]\d|2[0-3]):?([0-5]\d)?)?)?)?$
+  - in: query
+    name: period-limits
+    type: array
+    minItems: 2
+    maxItems: 2
+    collectionFormat: csv
+    uniqueItems: true
+    items:
+      # NOTE: it is Decimal type, but I am not able to reference it
+      type: integer
+      minimum: 1
+  - in: query
+    name: statuses
+    type: array
+    maxItems: 3
+    collectionFormat: csv
+    uniqueItems: true
+    items:
+      type: integer
+      minimum: 0
+      maximum: 2
+  - in: query
+    name: sort
+    type: array
+    required: false
+    minItems: 1
+    maxItems: 6
+    collectionFormat: csv
+    uniqueItems: true
+    items:
+      type: string
+      enum:
+      - +transactionId
+      - +createdAt
+      - +priceId
+      - +userId
+      - +period
+      - +status
+      - -transactionId
+      - -createdAt
+      - -priceId
+      - -userId
+      - -period
+      - -status
   responses:
     200:
       description: OK
       schema:
-        $ref: '#/definitions/DronePrice'
+        type: array
+        items:
+          $ref: '#/definitions/Transaction'
     400:
       $ref: '#/responses/ClientError'
 
+post:
+  tags:
+  - transactions
+  summary: Initiate transaction
+  operationId: initiateTransaction
+  security:
+  - Bearer: []
+  x-security-scopes:
+  - customer
+  - owner
+  parameters:
+  - in: query
+    name: select
+    required: false
+    type: array
+    collectionFormat: csv
+    uniqueItems: true
+    items:
+      type: string
+      enum:
+      - transactionId
+      - createdAt
+      - priceId
+      - userId
+      - period
+      - status
+  - in: body
+    name: transaction
+    required: true
+    schema:
+      $ref: '#/definitions/TransactionCreate'
+  responses:
+    200:
+      description: OK
+      schema:
+        $ref: '#/definitions/Transaction'
+    400:
+      $ref: '#/responses/ClientError'
